--- a/public/themes/default/template/bloc-ftp.html
+++ b/public/themes/default/template/bloc-ftp.html
@@ -1,24 +1,24 @@
 <article class="col-md-6" id="bloc-ftp">
     <div class="well well-sm">
-        <h4 class="titre-head"><i class="fa fa-link"></i> Les accès ftp - sftp - transdroid</h4>
+        <h4 class="titre-head"><i class="fa fa-link"></i> Πρόσβαση ftp - sftp - transdroid</h4>
         <div class="trait"></div>
 
-        <h5 class="device"><i class="fa fa-desktop"></i> <strong>Serveur FTP et sFTP</strong></h5>
+        <h5 class="device"><i class="fa fa-desktop"></i> <strong>Σέρβερ FTP και sFTP</strong></h5>
         <ul>
-            <li>Adresse (s)FTP : <em>(s)ftp://{{ host }}</em></li>
-            <li>User (s)FTP : <em>{{ userName }}</em></li>
-            <li>Port FTP : <em>{{ user.portFtp }}</em></li>
-            <li>Port sFTP : <em>{{ user.portSftp }}</em></li>
-            <li><a class="btn btn-info btn-xs" href="http://filezilla.fr/"><i class="glyphicon glyphicon-download-alt"></i> Télécharger filezilla</a></li>
-            <li><a id="popupfilezilla" class="btn btn-info btn-xs" data-toggle="popover" href="?download&amp;file=filezilla"><i class="fa fa-files-o"></i> Fichier de configuration</a></li>
+            <li>Διεύθυνση (s)FTP : <em>(s)ftp://{{ host }}</em></li>
+            <li>Χρήστς (s)FTP : <em>{{ userName }}</em></li>
+            <li>Θύρα FTP : <em>{{ user.portFtp }}</em></li>
+            <li>Θύρα sFTP : <em>{{ user.portSftp }}</em></li>
+            <li><a class="btn btn-info btn-xs" href="http://filezilla.fr/"><i class="glyphicon glyphicon-download-alt"></i> Λήψη filezilla</a></li>
+            <li><a id="popupfilezilla" class="btn btn-info btn-xs" data-toggle="popover" href="?download&amp;file=filezilla"><i class="fa fa-files-o"></i> Αρχείο ρυθμίσεων</a></li>
         </ul>
 
-        <h5 class="device"><i class="fa fa-android"></i> <strong>Application Transdroid</strong></h5>
+        <h5 class="device"><i class="fa fa-android"></i> <strong>Πρόγραμμα Transdroid</strong></h5>
         <ul>
             <li>Dossier SCGI : <em><strong>{{ user.scgi_folder }}</strong></em></li>
-            <li>Adresse http : <em>http://{{ host }}</em></li>
-            <li>User transdroid : <em>{{ userName }}</em></li>
-            <li><a class="btn btn-info btn-xs" href="http://transdroid.org/latest"><i class="glyphicon glyphicon-download-alt"></i> Télécharger Transdroid</a></li>
+            <li>Διεύθυνση http : <em>http://{{ host }}</em></li>
+            <li>Χρήστης transdroid : <em>{{ userName }}</em></li>
+            <li><a class="btn btn-info btn-xs" href="http://transdroid.org/latest"><i class="glyphicon glyphicon-download-alt"></i> Λήψη Transdroid</a></li>
             <li><a id="popuptransdroid" class="btn btn-info btn-xs" data-toggle="popover" href="?download&amp;file=transdroid"><i class="fa fa-files-o"></i> Fichier de configuration</a></li>
         </ul>
     </div>
