--- a/public/themes/default/template/header.html
+++ b/public/themes/default/template/header.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".phone-menu">
-            <span class="sr-only">Toggle navigation</span>
+            <span class="sr-only">Εναλλαγή πλοήγησης</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -22,10 +22,10 @@
                     {% if user.is_owner == true %}
                     <li><a href="?admin"><i class="glyphicon glyphicon-cog"></i> Administration</a></li>
                     {% endif %}
-                    <li><a class="aboutlink" data-toggle="modal" href="#popupinfo"><i class="glyphicon glyphicon-info-sign"></i> A propos</a></li>
+                    <li><a class="aboutlink" data-toggle="modal" href="#popupinfo"><i class="glyphicon glyphicon-info-sign"></i> Περί</a></li>
                     <li>
                         <a id="logout" href="#logout" title="Se déconnecter" data-urlredirect="{{ serveur.logout_url_redirect }}">
-                            <strong><i class="glyphicon glyphicon-log-out"></i> Déconnexion</strong>
+                            <strong><i class="glyphicon glyphicon-log-out"></i> Αποσύνδεση</strong>
                         </a>
                     </li>
                 </ul>
