--- a/public/themes/default/template/modal.html
+++ b/public/themes/default/template/modal.html
@@ -4,16 +4,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="target-rtorrent">Avertissement</h4>
+                <h4 class="modal-title" id="target-rtorrent">Προειδοποίηση</h4>
             </div>
             <div class="modal-body">
-                <p>&Ecirc;tes-vous sûr de vouloir redémarrer votre session rtorrent ?</p>
+                <p>Είσαστε βέβαιοι ότι θέλετε να επανεκκινήσετε την εργασία rtorrent ?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Ακύρωση</button>
                 <form action="index.php" method="post">
                     <input type="hidden" name="reboot">
-                    <input type="submit" value="Redémarrer" class="btn btn-info">
+                    <input type="submit" value="Επιβεβαίωση" class="btn btn-info">
                 </form>
             </div>
         </div>
@@ -26,15 +26,15 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="target-about-us">A propos</h4>
+                <h4 class="modal-title" id="target-about-us">Πληροφορίες</h4>
             </div>
             <div class="modal-body">
-                <p class="textmodaleabout">Application web par Backtoback &amp; Magicalex &amp; hydrog3n</p>
-                <p class="textmodaleabout">Contacter les développeurs sur github : <a href="https://github.com/Magicalex/seedbox-manager/issues" target="_blank">https://github.com/seedbox-manager</a></p>
-                <p class="textmodaleabout"><strong>Version 2.4.2</strong></p>
+                <p class="textmodaleabout">Seeddox Manager &amp; Atithasos</p>
+                <p class="textmodaleabout">Επικοινωνήστε μαζί μας : <a href="http://www.atithasosbiz/seedbox/cart.php" target="_blank">http://www.atithasosbiz/seedbox/cart.php</a></p>
+                <p class="textmodaleabout"><strong>Version 1.0.2</strong></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
             </div>
         </div>
     </div>
@@ -50,14 +50,14 @@
                 <h4 class="modal-title" id="target-delete-user"></h4>
             </div>
             <div class="modal-body">
-                <p>&Ecirc;tes-vous sûr de vouloir supprimer la configuration de cette utilisateur ?</p>
-                <p>Cette action est réversible.<br>Dès que votre utilisateur va se connecter les fichiers de configuration seront généré automatiquement (avec une configuration par défaut).</p>
+                <p>Είστε σίγουροι ότι θέλεται να διαγράψετε την διαμόρφωση του χρήστη ?</p>
+                <p>Η δράση αυτή είναι αναστρέψιμη.<br>Μόλις ο χρήστης συνδεθει, τα αρχεία ρυθμησεων θα δημιουργηθούν αυτίματα (με προεπιλεγμένη ρύθμηση).</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Ακύρωση</button>
                 <form action="index.php?admin" method="post">
                     <input type="hidden" name="deleteUserName" id="deleteUserName">
-                    <input type="submit" value="Supprimer" class="btn btn-danger">
+                    <input type="submit" value="Κατάργηση" class="btn btn-danger">
                 </form>
             </div>
         </div>
